apps/matrix/deployment-synapse.yaml
---
# yamllint disable rule:line-length
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
  labels:
    app: synapse
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest
          ports:
            - containerPort: 8008
              name: http
          volumeMounts:
            - name: synapse-config
              mountPath: /etc/matrix
            - name: synapse-data
              mountPath: /data
            - name: matrix-media
              mountPath: /media
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /_matrix/client/versions
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /_matrix/client/versions
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /_matrix/client/versions
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config-base
          configMap:
            name: synapse-config
        - name: synapse-secrets
          secret:
            secretName: synapse-secrets
        - name: synapse-config
          emptyDir: {}
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-config
        - name: postgres-data
          persistentVolumeClaim:
            claimName: synapse-postgres-data
        - name: matrix-media
          persistentVolumeClaim:
            claimName: matrix-data
