apps/matrix/service-element.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: matrix
spec:
  selector:
    app: element-web
  ports:
    - name: http
      port: 80
      targetPort: 80
