apps/matrix/service-synapse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    app: synapse
  ports:
    - name: http
      port: 8008
      targetPort: 8008
